# Calander

./: .env.example  .gitignore  README.md  capacitor.config.ts  index.html  package.json  vite.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
public/: manifest.webmanifest
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: cloud.ts
supabase/functions/calendar-dev-clear-social-data/: index.ts
supabase/functions/calendar-push-dispatch/: README.md  index.ts
supabase/migrations/: 20260220_calendar_social_shared.sql  20260221_calendar_invite_status_and_plan_details.sql  20260222_calendar_invite_membership_notifications_null_safe.sql  20260222_calendar_invite_response_notifications.sql  20260222_calendar_plan_update_notifications.sql  20260222_calendar_visibility_policy_updates.sql  20260227_calendar_invite_insert_notifications.sql  20260227_calendar_push_dispatch_webhook.sql  20260227_calendar_push_tokens.sql  20260228_calendar_invite_membership_plan_invite_fix.sql  20260228_calendar_notifications_delete_policy.sql  20260228_calendar_shared_plans_recurrence.sql  20260301_calendar_plan_invites_owner_manage_policy.sql  20260301_calendar_shared_plans_delete_tombstone_guard.sql  20260301_calendar_shared_plans_instance_overrides.sql  20260301_calendar_uninvite_notification_cleanup.sql
(+3 files in other folders)
